Fixed formating in LSTM

--- a/lstm_training_palo_alto.ipynb
+++ b/lstm_training_palo_alto.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forecasting EV Charging Demand in Palo Alto (USA) with Long Short-Term Memory Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "* [1. Introduction](#chapter1)\n",
+    "* [2. Data processing](#chapter2)\n",
+    "* [3. Model Implementation](##chapter3)\n",
+    "    * [3.1 Daily Model Implementation](#chapter3.1)\n",
+    "    * [3.2 Weekly Model Implementation](#chapter3.2)\n",
+    "    * [3.2 Monthly Model Implementation](#chapter3.3)\n",
+    "* [4. Conclusion](#chapter4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook goes through the process of training LSTM for Palo Alto. It uses dataset containing over 9 years of charging records in the city of Palo Alto. The model is trained to predict single next observation based on the previous records. The predictions are made on daily, weekly and monthly level to reflect companies needs for both short-term and long-term planning. Models are trained on each of the stations separately to achieve better performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
@@ -21,16 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LSTM - Palo Alto\n",
-    "\n",
-    "This notebook goes through the process of training LSTM for Palo Alto. It uses dataset containing over 9 years of charging records in the city of Palo Alto. The model is trained to predict single next observation based on the previous records. The predictions are made on daily, weekly and monthly level to reflect companies needs for both short-term and long-term planning. Models are trained on each of the stations separately to achieve better performance."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data processing"
+    "## 2. Data processing"
    ]
   },
   {
@@ -154,18 +180,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Daily data processing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Daily grouping and processing\n",
     "for station in stations:\n",
     "\n",
     "    df_temp = stations_dict[station]['data'].copy()\n",
@@ -186,18 +206,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Weekly data processing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Weekly grouping and processing\n",
     "for station in stations:\n",
     "\n",
     "    df_temp = stations_dict[station]['data'].copy()\n",
@@ -220,18 +234,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Monthly data processing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Monthly grouping and processing\n",
     "for station in stations:\n",
     "\n",
     "    df_temp = stations_dict[station]['data'].copy()\n",
@@ -306,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model definition"
+    "## 3. Model Implementation"
    ]
   },
   {
@@ -530,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Daily LSTM training"
+    "### 3.1 Daily Model Implementation"
    ]
   },
   {
@@ -1027,7 +1035,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Weekly LSTM model"
+    "### 3.2 Weekly Model Implementation"
    ]
   },
   {
@@ -1564,7 +1572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Monthly predictions"
+    "### 3.3 Monthly Model Implementation"
    ]
   },
   {
@@ -2261,7 +2269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusions"
+    "## 4. Conclusion"
    ]
   },
   {
