--- a/lstm_training_perth.ipynb
+++ b/lstm_training_perth.ipynb
@@ -1,6 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forecasting EV Charging Demand in Perth (AUS) with Long Short-Term Memory Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Contents\n",
+    "* [1. Introduction](#chapter1)\n",
+    "* [2. Data processing](#chapter2)\n",
+    "* [3. Model Implementation](##chapter3)\n",
+    "    * [3.1 Daily Model Implementation](#chapter3.1)\n",
+    "    * [3.2 Weekly Model Implementation](#chapter3.2)\n",
+    "    * [3.2 Monthly Model Implementation](#chapter3.3)\n",
+    "* [4. Conclusion](#chapter4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook goes through the process of training LSTM for Perth. It uses dataset containing around 4 years of charging records in the city of Perth. The model is trained to predict single next observation based on the previous records. The predictions are made on daily, weekly and monthly level to reflect companies needs for both short-term and long-term planning. Models are trained on each of the stations separately to achieve better performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
@@ -21,16 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LSTM - Perth\n",
-    "\n",
-    "This notebook goes through the process of training LSTM for Perth. It uses dataset containing around 4 years of charging records in the city of Perth. The model is trained to predict single next observation based on the previous records. The predictions are made on daily, weekly and monthly level to reflect companies needs for both short-term and long-term planning. Models are trained on each of the stations separately to achieve better performance."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data processing"
+    "## 2. Data processing"
    ]
   },
   {
@@ -173,13 +199,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Daily data processing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
@@ -206,13 +225,6 @@
     "    daily_merged['Total kWh'] = daily_merged['Total kWh'].fillna(rolling_mean_energy)\n",
     "\n",
     "    stations_dict[station]['daily'] = daily_merged"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Weekly data processing"
    ]
   },
   {
@@ -245,13 +257,6 @@
     "\n",
     "    # Use mean for filling missing data\n",
     "    stations_dict[station]['weekly'] = weekly_merged"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Monthly data processing"
    ]
   },
   {
@@ -341,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model definition"
+    "## 3. Model Implementation"
    ]
   },
   {
@@ -564,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Daily LSTM model"
+    "### 3.1 Daily Model Implementation"
    ]
   },
   {
@@ -1181,7 +1186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Weekly LSTM training"
+    "### 3.2 Weekly Model Implementation"
    ]
   },
   {
@@ -1853,7 +1858,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Monthly LSTM training"
+    "### 3.3 Monthly Model Implementation"
    ]
   },
   {
@@ -2745,7 +2750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusions"
+    "## 4. Conclusion"
    ]
   },
   {
