--- a/LLM.ipynb
+++ b/LLM.ipynb
@@ -11,6 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Table of Contents\n",
+    "* [1. How to integrate an LLM with our existing predicitive models for energy demand?](#chapter1)\n",
+    "* [2. Set up guide](#chapter2)\n",
+    "* [3. Using custom Llama3](#chapter3)\n",
+    "* [4. Example test](#chapter4)\n",
+    "* [5. Conclussions & potential for improvement](#chapter5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this section a locally hosted, llama3 model is used in order to provide strategic insights on the predicitons built by the ML models. Given the compelxity of the problem and the considerable uncertainty surrounding the optimality of ev charging stations placement, the team has decided to explore the power of natural language processing models in order to gather knowledge from state of the art work on the field of optimal location problems and actual data from the company.\n",
     "\n",
     "\n",
@@ -87,6 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name=\"chapter1\"></a>\n",
     "## 1. How to integrate an LLM with our existing predicitive models for energy demand?\n",
     "\n",
     "The image above illustrates the processes integration and data flow:\n",
@@ -139,6 +152,7 @@
    "metadata": {},
    "source": [
     "Big thanks to Mervin Praison for setting up an amazing and easy to follow guide on setting up the llm. We have used it as a basis for our work(https://mer.vin/).\n",
+    "<a name=\"chapter2\"></a>\n",
     "## 2. Set up guide\n",
     "\n",
     "### 2.1. Setup Environment and Install packages\n",
@@ -205,6 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name=\"chapter3\"></a>\n",
     "## 3. Using custom Llama3\n",
     "\n",
     "A new instance on your browser should open up with the application up and running. At the left you are able to upload your pdf document into the database and additionally there is a link bar in which you can input any website to  be explored by llama.\n"
@@ -380,6 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name=\"chapter4\"></a>\n",
     "# 4. Example test\n",
     "\n",
     "For exemplification we will use the RF model predictions for the last tested day, week and day together with a picked selection of documents por the llama knowledgebase to come up with a strategy.\n",
@@ -486,6 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a name=\"chapter5\"></a>\n",
     "## 5. Conclussions & potential for improvement.\n",
     "\n",
     "\n",
@@ -501,6 +518,11 @@
     "\n",
     "In this work we pretended to escape from the common approaches to facility location problems and present a new and original perspective to the issue. Hence, this goal has been siccesfully met, and we leave the door open for future exploration and improvement upon this path."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
