Loading the rf preds

--- a/Conclusions.ipynb
+++ b/Conclusions.ipynb
@@ -29,6 +29,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook aims at summarizing the performance of different models applied during the project. Models have been trained in their respective notebooks and the predictions have been loaded here for comparison."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -44,11 +51,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = 'daily_predictions_palo_alto_rf.pk1'\n",
+    "\n",
+    "with open(file_path, 'rb') as f:\n",
+    "    rf_preds = pickle.load(f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<a name=\"chapter2\"></a>\n",
     "## 2. Palo Alto Forecasting comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The few following command are used to load the results of lstm model."
    ]
   },
   {
@@ -219,6 +245,13 @@
    ],
    "source": [
     "palo_alto_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The table above summarizes the RMSE errors of different models. RMSE between different timeframes should not be compared as the scale of demand is different. Daily predictions for all of the stations are rather low and do not vary that much among the stations."
    ]
   },
   {
