Added comments to conclusions.ipynb

--- a/Conclusions.ipynb
+++ b/Conclusions.ipynb
@@ -251,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The table above summarizes the RMSE errors of different models. RMSE between different timeframes should not be compared as the scale of demand is different. Daily predictions for all of the stations are rather low and do not vary that much among the stations."
+    "The table above summarizes the RMSE errors of different models. RMSE between different timeframes should not be compared as the scale of demand is different. Daily predictions for all of the stations are rather low and do not vary that much among the stations. The highest variablity in performance is observed for monthly models."
    ]
   },
   {
@@ -305,6 +305,13 @@
     "plt.subplots_adjust(top=0.92)\n",
     "plt.suptitle('Predictions comparison for different timeframes of 3 chosen Palo Alto stations', fontsize=30)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Three chosen stations were picked to ilustrate the predictions. It can be seen that the lstm predictions reflect the data well and can definately aid companies at preparing for the future demands. Sometimes the model fails to predict the sudden spikes or drops but given the nature of the task this is understandable."
    ]
   },
   {
@@ -442,6 +449,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Judging by the RMSE the predictions also seem to be performing well. Daily predictions for all of the stations are rather low (maybe with the exception of Broxden). Weekly predictions also seem fine and only in case of two stations RMSE is large. Monthly predictions vary a lot and for some stations do not produce decent results at all."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -492,6 +506,13 @@
     "plt.subplots_adjust(top=0.92)\n",
     "plt.suptitle('Predictions comparison for different timeframes of 3 chosen Perth stations', fontsize=30)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking further into predictions the conclusions change a bit. It can be seen that, although decent on average, the predictions are almost always off and flat. This performance should not differ much from implementing the baseline model."
    ]
   },
   {
@@ -719,6 +740,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the exception of few stations the results seem decent. Few stations register very high error but apart from that judging by RMSE results are fine."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -775,6 +803,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Once again the story changes when looking deeper into predictions. Above the predicted values for several last weekly and monthly observations were plotted. Clearly predictions are bad. They do not account for any variability and are simply flat, very often off the target."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a name=\"chapter5\"></a>\n",
     "## 5. Transfer Learning Experiment"
    ]
@@ -813,6 +848,13 @@
    "source": [
     "<a name=\"chapter6\"></a>\n",
     "## 6. Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The models we have developed seem to be performing well for Palo Alto but rather poor in case of Perth and Dundee. This issues is caused by different data quality among the cities. Perth suffers from missing data while Dundee's timeframe is too short. In light of that we resorted to experimenting with transfer learning approach in which a model trained for MPL Palo Alto station was utilized to predict the energy demand in Dundee. The results are very satisfactory as the transfer learning approach helped produced significantly better forecasts. This means that a business wanting to expand its operation to a new location can use the transfer learning strategy to produce valuable predictions until enough data are gathered to train the model locally. Additionally this apporach can cut costs of model development as transfer learning is much similier from technical perspective and does not require that much effort from engineers."
    ]
   },
   {
