--- a/Conclusions.ipynb
+++ b/Conclusions.ipynb
@@ -148,6 +148,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palo Alto LSTM RMSE:\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -238,32 +245,23 @@
        "CAMBRIDGE      45.476347  209.172979   654.103174"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "palo_alto_rmse"
+    "from IPython.display import display\n",
+    "\n",
+    "# Display each DataFrame with a title printed before it\n",
+    "print(\"Palo Alto LSTM RMSE:\")\n",
+    "display(palo_alto_rmse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'daily_predictions_dundee_rf.pk1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 18\u001b[0m\n\u001b[0;32m     14\u001b[0m         loaded_data[file] \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[0;32m     16\u001b[0m rf_dict \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpalo_alto\u001b[39m\u001b[38;5;124m'\u001b[39m:{}, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mperth\u001b[39m\u001b[38;5;124m'\u001b[39m:{}, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdundee\u001b[39m\u001b[38;5;124m'\u001b[39m:{}}\n\u001b[1;32m---> 18\u001b[0m rf_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpalo_alto\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdaily\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mloaded_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdaily_predictions_dundee_rf.pk1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     19\u001b[0m rf_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpalo_alto\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweekly\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m loaded_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdaily_predictions_palo_alto_rf.pk1\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     20\u001b[0m rf_dict[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpalo_alto\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmonthly\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m loaded_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdaily_predictions_perth_rf.pk1\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'daily_predictions_dundee_rf.pk1'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Directory containing the pickle files\n",
     "directory = 'predictions/pickles_rf'\n",
@@ -282,15 +280,141 @@
     "\n",
     "rf_dict = {'palo_alto':{}, 'perth':{}, 'dundee':{}}\n",
     "\n",
-    "rf_dict['palo_alto']['daily'] = loaded_data['daily_predictions_dundee_rf.pk1']\n",
-    "rf_dict['palo_alto']['weekly'] = loaded_data['daily_predictions_palo_alto_rf.pk1']\n",
-    "rf_dict['palo_alto']['monthly'] = loaded_data['daily_predictions_perth_rf.pk1']\n",
-    "rf_dict['perth']['daily'] = loaded_data['monthly_predictions_dundee_rf.pk1']\n",
-    "rf_dict['perth']['weekly'] = loaded_data['monthly_predictions_palo_alto_rf.pk1']\n",
-    "rf_dict['perth']['monthly'] = loaded_data['monthly_predictions_perth_rf.pk1']\n",
-    "rf_dict['dundee']['daily'] = loaded_data['weekly_predictions_dundee_rf.pk1']\n",
-    "rf_dict['dundee']['weekly'] = loaded_data['weekly_predictions_palo_alto_rf.pk1']\n",
-    "rf_dict['dundee']['weekly'] = loaded_data['weekly_predictions_perth_rf.pk1']"
+    "rf_dict['palo_alto']['daily'] = loaded_data['daily_predictions_palo_alto_rf.pkl']\n",
+    "rf_dict['palo_alto']['weekly'] = loaded_data['weekly_predictions_palo_alto_rf.pkl']\n",
+    "rf_dict['palo_alto']['monthly'] = loaded_data['monthly_predictions_palo_alto_rf.pkl']\n",
+    "rf_dict['perth']['daily'] = loaded_data['daily_predictions_perth_rf.pkl']\n",
+    "rf_dict['perth']['weekly'] = loaded_data['weekly_predictions_perth_rf.pkl']\n",
+    "rf_dict['perth']['monthly'] = loaded_data['monthly_predictions_perth_rf.pkl']\n",
+    "rf_dict['dundee']['daily'] = loaded_data['daily_predictions_dundee_rf.pkl']\n",
+    "rf_dict['dundee']['weekly'] = loaded_data['weekly_predictions_dundee_rf.pkl']\n",
+    "rf_dict['dundee']['monthly'] = loaded_data['monthly_predictions_dundee_rf.pkl']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "palo_altoRF_rmse = convert_to_dataframes(rf_dict['palo_alto'], timeframes = ['daily', 'weekly', 'monthly'])\n",
+    "perthRF_rmse = convert_to_dataframes(rf_dict['perth'], timeframes = ['daily', 'weekly', 'monthly'])\n",
+    "dundeeRF_rmse = convert_to_dataframes(rf_dict['dundee'], timeframes = ['daily', 'weekly', 'monthly'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palo Alto RF RMSE:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daily</th>\n",
+       "      <th>weekly</th>\n",
+       "      <th>monthly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / HAMILTON</th>\n",
+       "      <td>32.462227</td>\n",
+       "      <td>32.462227</td>\n",
+       "      <td>32.462227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / HIGH</th>\n",
+       "      <td>36.169416</td>\n",
+       "      <td>36.169416</td>\n",
+       "      <td>36.169416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / BRYANT</th>\n",
+       "      <td>33.903141</td>\n",
+       "      <td>33.903141</td>\n",
+       "      <td>33.903141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / MPL</th>\n",
+       "      <td>34.537735</td>\n",
+       "      <td>34.537735</td>\n",
+       "      <td>34.537735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RINCONADA LIB</th>\n",
+       "      <td>39.530152</td>\n",
+       "      <td>39.530152</td>\n",
+       "      <td>39.530152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / WEBSTER</th>\n",
+       "      <td>43.404334</td>\n",
+       "      <td>43.404334</td>\n",
+       "      <td>43.404334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / TED THOMPSON</th>\n",
+       "      <td>31.041727</td>\n",
+       "      <td>31.041727</td>\n",
+       "      <td>31.041727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / CAMBRIDGE</th>\n",
+       "      <td>55.943619</td>\n",
+       "      <td>55.943619</td>\n",
+       "      <td>55.943619</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 daily     weekly    monthly\n",
+       "PALO ALTO CA / HAMILTON      32.462227  32.462227  32.462227\n",
+       "PALO ALTO CA / HIGH          36.169416  36.169416  36.169416\n",
+       "PALO ALTO CA / BRYANT        33.903141  33.903141  33.903141\n",
+       "PALO ALTO CA / MPL           34.537735  34.537735  34.537735\n",
+       "RINCONADA LIB                39.530152  39.530152  39.530152\n",
+       "PALO ALTO CA / WEBSTER       43.404334  43.404334  43.404334\n",
+       "PALO ALTO CA / TED THOMPSON  31.041727  31.041727  31.041727\n",
+       "PALO ALTO CA / CAMBRIDGE     55.943619  55.943619  55.943619"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display\n",
+    "\n",
+    "# Display each DataFrame with a title printed before it\n",
+    "print(\"Palo Alto RF RMSE:\")\n",
+    "display(palo_altoRF_rmse)"
    ]
   },
   {
@@ -302,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -370,9 +494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perth LSTM RMSE:\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -485,13 +616,126 @@
        "Friarton Depot                         17.457945   56.165617   323.698962"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"Perth LSTM RMSE:\")\n",
     "perth_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perth RF RMSE:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daily</th>\n",
+       "      <th>weekly</th>\n",
+       "      <th>monthly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / HAMILTON</th>\n",
+       "      <td>32.462227</td>\n",
+       "      <td>32.462227</td>\n",
+       "      <td>32.462227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / HIGH</th>\n",
+       "      <td>36.169416</td>\n",
+       "      <td>36.169416</td>\n",
+       "      <td>36.169416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / BRYANT</th>\n",
+       "      <td>33.903141</td>\n",
+       "      <td>33.903141</td>\n",
+       "      <td>33.903141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / MPL</th>\n",
+       "      <td>34.537735</td>\n",
+       "      <td>34.537735</td>\n",
+       "      <td>34.537735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RINCONADA LIB</th>\n",
+       "      <td>39.530152</td>\n",
+       "      <td>39.530152</td>\n",
+       "      <td>39.530152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / WEBSTER</th>\n",
+       "      <td>43.404334</td>\n",
+       "      <td>43.404334</td>\n",
+       "      <td>43.404334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / TED THOMPSON</th>\n",
+       "      <td>31.041727</td>\n",
+       "      <td>31.041727</td>\n",
+       "      <td>31.041727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / CAMBRIDGE</th>\n",
+       "      <td>55.943619</td>\n",
+       "      <td>55.943619</td>\n",
+       "      <td>55.943619</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 daily     weekly    monthly\n",
+       "PALO ALTO CA / HAMILTON      32.462227  32.462227  32.462227\n",
+       "PALO ALTO CA / HIGH          36.169416  36.169416  36.169416\n",
+       "PALO ALTO CA / BRYANT        33.903141  33.903141  33.903141\n",
+       "PALO ALTO CA / MPL           34.537735  34.537735  34.537735\n",
+       "RINCONADA LIB                39.530152  39.530152  39.530152\n",
+       "PALO ALTO CA / WEBSTER       43.404334  43.404334  43.404334\n",
+       "PALO ALTO CA / TED THOMPSON  31.041727  31.041727  31.041727\n",
+       "PALO ALTO CA / CAMBRIDGE     55.943619  55.943619  55.943619"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(\"Perth RF RMSE:\")\n",
+    "display(perthRF_rmse)"
    ]
   },
   {
@@ -503,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -571,9 +815,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dundee LSTM RMSE:\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -776,13 +1027,126 @@
        "Earn Cresent, Dundee                             6.389269          NaN"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"Dundee LSTM RMSE:\")\n",
     "dundee_rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dundee RF RMSE:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daily</th>\n",
+       "      <th>weekly</th>\n",
+       "      <th>monthly</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / HAMILTON</th>\n",
+       "      <td>32.462227</td>\n",
+       "      <td>32.462227</td>\n",
+       "      <td>32.462227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / HIGH</th>\n",
+       "      <td>36.169416</td>\n",
+       "      <td>36.169416</td>\n",
+       "      <td>36.169416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / BRYANT</th>\n",
+       "      <td>33.903141</td>\n",
+       "      <td>33.903141</td>\n",
+       "      <td>33.903141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / MPL</th>\n",
+       "      <td>34.537735</td>\n",
+       "      <td>34.537735</td>\n",
+       "      <td>34.537735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RINCONADA LIB</th>\n",
+       "      <td>39.530152</td>\n",
+       "      <td>39.530152</td>\n",
+       "      <td>39.530152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / WEBSTER</th>\n",
+       "      <td>43.404334</td>\n",
+       "      <td>43.404334</td>\n",
+       "      <td>43.404334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / TED THOMPSON</th>\n",
+       "      <td>31.041727</td>\n",
+       "      <td>31.041727</td>\n",
+       "      <td>31.041727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PALO ALTO CA / CAMBRIDGE</th>\n",
+       "      <td>55.943619</td>\n",
+       "      <td>55.943619</td>\n",
+       "      <td>55.943619</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 daily     weekly    monthly\n",
+       "PALO ALTO CA / HAMILTON      32.462227  32.462227  32.462227\n",
+       "PALO ALTO CA / HIGH          36.169416  36.169416  36.169416\n",
+       "PALO ALTO CA / BRYANT        33.903141  33.903141  33.903141\n",
+       "PALO ALTO CA / MPL           34.537735  34.537735  34.537735\n",
+       "RINCONADA LIB                39.530152  39.530152  39.530152\n",
+       "PALO ALTO CA / WEBSTER       43.404334  43.404334  43.404334\n",
+       "PALO ALTO CA / TED THOMPSON  31.041727  31.041727  31.041727\n",
+       "PALO ALTO CA / CAMBRIDGE     55.943619  55.943619  55.943619"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(\"Dundee RF RMSE:\")\n",
+    "display(dundeeRF_rmse)"
    ]
   },
   {
@@ -794,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
